--- a/css/furniture.css
+++ b/css/furniture.css
@@ -34,6 +34,7 @@
     font-size: 50px !important;
     line-height: 30px;
     margin-top: 45px;
+    margin-left: 20px;
 }
 .navbar-toggler {
 	background-color: #fff !important;
